[gd_scene load_steps=6 format=2]

[ext_resource path="res://Example/iekika.png" type="Texture" id=1]
[ext_resource path="res://Example/Talker.gd" type="Script" id=2]
[ext_resource path="res://Example/Player.gd" type="Script" id=3]
[ext_resource path="res://Example/AreaSprite.tscn" type="PackedScene" id=4]
[ext_resource path="res://Example/PortraitDialougeExample.tscn" type="PackedScene" id=5]

[node name="ExampleScene" type="Node2D"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Instructions" type="Label" parent="UI"]
margin_left = 8.0
margin_top = 8.0
margin_right = 135.0
margin_bottom = 39.0
text = "Arrow keys to move
'Enter' to talk"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortraitDialougeExample" parent="UI" instance=ExtResource( 5 )]

[node name="Talker" parent="." instance=ExtResource( 4 )]
position = Vector2( 619.451, 111.162 )
script = ExtResource( 2 )
dialouge = "#show_face res://Example/icon.png
Hey kid, wanna hear a $wsecret?$_
#show_face res://Example/iekika.png
Sure!
#show_face res://Example/icon.png
Obama's $sdead.$_
#show_face res://Example/iekika.png
W-what?
#show_face res://Example/icon.png
Don't tell anyone."

[node name="Talker3" parent="." instance=ExtResource( 4 )]
position = Vector2( 742.443, 368.227 )
script = ExtResource( 2 )
dialouge = "#show_face res://Example/icon.png
$+You!!!!$=
#show_face res://Example/iekika.png
$sMe????
#show_face res://Example/icon.png
You are the $3$wchosen hero!$_
You must go to the $wsacred mountain$_ and find the $wtreasure!
#show_face res://Example/iekika.png
Uh... ok?"

[node name="Talker2" parent="." instance=ExtResource( 4 )]
position = Vector2( 252.69, 401.468 )
script = ExtResource( 2 )
dialouge = "#show_face res://Example/iekika.png
What do you have to say?
#show_face res://Example/icon.png
$rThe Gay Agenda$_
#show_face res://Example/iekika.png
Good for you!"

[node name="Player" parent="." instance=ExtResource( 4 )]
script = ExtResource( 3 )

[node name="Sprite" parent="Player" index="0"]
texture = ExtResource( 1 )
[connection signal="area_entered" from="Player" to="Player" method="_on_Player_area_entered"]
[connection signal="area_exited" from="Player" to="Player" method="_on_Player_area_exited"]

[editable path="Player"]
